--- a/css/main.css
+++ b/css/main.css
@@ -19,13 +19,15 @@ body {
 
 .ryu-ready,
 .ryu-still,
-.ryu-throwing {
+.ryu-throwing,
+.ryu-cool {
 	width: 659px;
 	height: 494px;
 }
 
 .ryu-ready,
-.ryu-throwing {
+.ryu-throwing,
+.ryu-cool {
 	display: none;
 }
 
@@ -41,10 +43,15 @@ body {
 	background-image: url('../images/ryu-throwing-hadouken.png');
 }
 
+.ryu-cool {
+	background-image: url('../images/ryu-cool.gif');
+}
+
 .hadouken,
 .ryu-ready,
 .ryu-still,
-.ryu-throwing {
+.ryu-throwing,
+.ryu-cool {
 	background-repeat: no-repeat;
 }
 
@@ -57,6 +64,18 @@ body {
 	position: absolute;
 	z-index: 10;
 	top: 175px;
-	left: 635px;
+	left: 520px;
 	float: left;
 }	
+
+.ready-hadouken-instr {
+	position: absolute;
+	left: 800px;
+	top: 150px;
+}
+
+.be-cool-instr {
+	position: absolute;
+	top: 300px;
+	left: 900px;
+}
